Improve recipe alignment and viewing, view other profiles, and add user follow function