@@ -1,6 +1,7 @@
-// src/main/java/com/example/BMN/Recipe/RecipeController.java
 package com.example.BMN.Recipe;
 
+import com.example.BMN.User.SiteUser;
+import com.example.BMN.User.UserRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.Part;
@@ -16,7 +17,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "http://localhost:3000")
 @RequestMapping("/recipe")
@@ -26,9 +26,11 @@ public class RecipeController {
 
     private final RecipeService recipeService;
     private final RecipeStepImageRepository recipeStepImageRepository;
+    private final FavoriteRepository favoriteRepository;
+    private final UserRepository userRepository;
     private final ObjectMapper objectMapper = new ObjectMapper();
 
-    /* ===================== View pages (optional) ===================== */
+    /* ===================== View pages ===================== */
 
     @GetMapping("/list")
     public String list(Model model, @RequestParam(value = "page", defaultValue = "0") int page) {
@@ -42,42 +44,12 @@ public class RecipeController {
         return "recipe_detail";
     }
 
-    /* ===================== JSON: 단건 조회 ===================== */
+    /* ===================== JSON API (단건) ===================== */
 
     @GetMapping(value = "/api/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseBody
     public ResponseEntity<RecipeDTO> getRecipeJson(@PathVariable("id") Long id) {
         return ResponseEntity.ok(new RecipeDTO(this.recipeService.getRecipe(id)));
-    }
-
-    /* ===================== JSON: 목록(페이지/배열 겸용) ===================== */
-
-    /**
-     * 목록 데이터:
-     * - page/size 중 하나라도 오면 Page 반환(목록 화면)
-     * - 아무 파라미터 없으면 베스트 8개 배열 반환(메인 화면 하위호환)
-     * sort: latest|views|rating|oldest|favorites (favorites는 최신순 대체)
-     */
-    @GetMapping(value = "/data", produces = MediaType.APPLICATION_JSON_VALUE)
-    @ResponseBody
-    public ResponseEntity<?> listData(
-            @RequestParam(value = "page", required = false) Integer page,
-            @RequestParam(value = "size", required = false) Integer size,
-            @RequestParam(value = "sort", required = false, defaultValue = "views") String sort
-    ) {
-        // 파라미터 없으면: 메인페이지 호환 - 베스트 8개 배열
-        if (page == null && size == null) {
-            Page<Recipe> p = recipeService.listSorted(0, 8, "views");
-            List<RecipeDTO> list = p.getContent().stream().map(RecipeDTO::new).collect(Collectors.toList());
-            return ResponseEntity.ok(list);
-        }
-
-        // 페이지 요청: Page 반환
-        int pg = page == null ? 0 : Math.max(0, page);
-        int sz = size == null ? 12 : Math.max(1, size);
-        Page<Recipe> pageData = recipeService.listSorted(pg, sz, sort);
-        Page<RecipeDTO> dtoPage = pageData.map(RecipeDTO::new);
-        return ResponseEntity.ok(dtoPage);
     }
 
     /* ===================== 생성 ===================== */
@@ -180,9 +152,8 @@ public class RecipeController {
         return ResponseEntity.ok(step.getImage());
     }
 
-    /* ===================== 조회수 ===================== */
+    /* ===================== 조회수 & 즐겨찾기 ===================== */
 
-    // 상세 진입 시 호출하여 조회수 +1
     @PostMapping("/api/{id}/view")
     @ResponseBody
     public ResponseEntity<Void> increaseView(@PathVariable("id") Long id) {
@@ -190,9 +161,6 @@ public class RecipeController {
         return ResponseEntity.noContent().build();
     }
 
-    /* ===================== 즐겨찾기 ===================== */
-
-    // 현재 로그인 사용자의 즐겨찾기 상태 & 총 개수
     @GetMapping("/api/{id}/favorite")
     @ResponseBody
     public ResponseEntity<FavoriteStatus> favoriteStatus(@PathVariable("id") Long id) {
@@ -201,7 +169,6 @@ public class RecipeController {
         return ResponseEntity.ok(new FavoriteStatus(favorited, count));
     }
 
-    // 즐겨찾기 추가
     @PostMapping("/api/{id}/favorite")
     @ResponseBody
     public ResponseEntity<FavoriteStatus> addFavorite(@PathVariable("id") Long id) {
@@ -209,7 +176,6 @@ public class RecipeController {
         return ResponseEntity.ok(new FavoriteStatus(r.isFavorited(), r.getFavoriteCount()));
     }
 
-    // 즐겨찾기 취소
     @DeleteMapping("/api/{id}/favorite")
     @ResponseBody
     public ResponseEntity<FavoriteStatus> removeFavorite(@PathVariable("id") Long id) {
@@ -217,40 +183,74 @@ public class RecipeController {
         return ResponseEntity.ok(new FavoriteStatus(r.isFavorited(), r.getFavoriteCount()));
     }
 
-    // 컨트롤러 내부 DTO
     public record FavoriteStatus(boolean favorited, int favoriteCount) {}
 
-    /* ===================== 내 레시피 / 내 즐겨찾기 (마이페이지/메인) ===================== */
+    /* ===================== 사용자별 레시피/즐겨찾기 조회 ===================== */
 
-    // 내가 작성한 레시피(배열) — MyPage에서 사용
-    @GetMapping(value = "/api/me/recipes", produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping("/api/user/{username}/recipes")
     @ResponseBody
-    public ResponseEntity<List<RecipeDTO>> myRecipes() {
-        // 페이지가 필요하면 service.listMyRecipes(page,size)로 바꿔도 됨
-        // 여기서는 간단히 최신 100개 정도만 배열로 반환
-        Page<Recipe> p = recipeService.listMyRecipes(0, 100);
-        List<RecipeDTO> list = p.getContent().stream().map(RecipeDTO::new).collect(Collectors.toList());
+    public ResponseEntity<List<RecipeDTO>> recipesByUser(@PathVariable String username) {
+        SiteUser user = userRepository.findByUserName(username)
+                .orElseThrow(() -> new IllegalArgumentException("User not found: " + username));
+        var list = recipeService.findAll().stream()
+                .filter(r -> r.getAuthor() != null && user.getId().equals(r.getAuthor().getId()))
+                .map(RecipeDTO::new)
+                .toList();
         return ResponseEntity.ok(list);
     }
 
-    // 내가 즐겨찾기한 레시피(배열) — MyPage/메인에서 사용
-    @GetMapping(value = "/api/me/favorites", produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping("/api/user/{username}/favorites")
     @ResponseBody
-    public ResponseEntity<List<RecipeDTO>> myFavorites() {
-        Page<Recipe> p = recipeService.listMyFavoriteRecipes(0, 100);
-        List<RecipeDTO> list = p.getContent().stream().map(RecipeDTO::new).collect(Collectors.toList());
+    public ResponseEntity<List<RecipeDTO>> favoritesByUser(@PathVariable String username) {
+        SiteUser user = userRepository.findByUserName(username)
+                .orElseThrow(() -> new IllegalArgumentException("User not found: " + username));
+        var list = favoriteRepository.findByUserOrderByIdDesc(user).stream()
+                .map(Favorite::getRecipe)
+                .map(RecipeDTO::new)
+                .toList();
         return ResponseEntity.ok(list);
     }
 
-    // (하위호환) 메인에서 쓰던 엔드포인트: /favorite/data/{userName}
-    // 현재 로그인 사용자의 즐겨찾기를 반환(경로의 userName은 무시)
-    @GetMapping(value = "/favorite/data/{userName}", produces = MediaType.APPLICATION_JSON_VALUE)
+    /* ===================== 트렌딩 정렬 (통합 버전) ===================== */
+
+    @GetMapping("/data")
     @ResponseBody
-    public ResponseEntity<List<RecipeDTO>> favoritesCompat(@PathVariable("userName") String userName) {
-        Page<Recipe> p = recipeService.listMyFavoriteRecipes(0, 100);
-        List<RecipeDTO> list = p.getContent().stream().map(RecipeDTO::new).collect(Collectors.toList());
-        return ResponseEntity.ok(list);
+    public ResponseEntity<?> trendingUnified(
+            @RequestParam(required = false) Integer page,
+            @RequestParam(required = false) Integer size
+    ) {
+        int p = (page != null) ? page : 0;
+        int s = (size != null) ? size : 8;  // 기본값 8개
+
+        Page<Recipe> paged = recipeService.listTrending(p, s);
+        List<RecipeDTO> content = paged.getContent().stream()
+                .map(RecipeDTO::new)
+                .toList();
+
+        // ✅ page 파라미터가 없으면: 상위 리스트 반환 (메인용)
+        if (page == null) {
+            return ResponseEntity.ok(content);
+        }
+
+        // ✅ page 파라미터가 있으면: PageEnvelope 형태 반환 (목록용)
+        PageEnvelope<RecipeDTO> result = new PageEnvelope<>(
+                content,
+                paged.getNumber(),
+                paged.getSize(),
+                paged.getTotalElements(),
+                paged.isLast()
+        );
+        return ResponseEntity.ok(result);
     }
+
+    // 공통 PageEnvelope DTO
+    public record PageEnvelope<T>(
+            List<T> content,
+            int page,
+            int size,
+            long total,
+            boolean last
+    ) {}
 
     /* ===================== Helpers ===================== */
 
